--- a/presentation/src/main/res/layout/activity_main_home.xml
+++ b/presentation/src/main/res/layout/activity_main_home.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#66C2D2F2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#66C2D2F2"
     tools:context=".MainHomeActivity">
 
     <LinearLayout
@@ -28,9 +28,11 @@
         <EditText
             android:id="@+id/input_name"
             style="@style/B2_2"
+            android:gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
+            android:layout_marginBottom="40dp"
             android:autofillHints="username"
             android:background="@null"
             android:hint="@string/name_hint"
@@ -38,25 +40,12 @@
             android:textColor="@color/GS_700"
             android:textColorHint="@color/GS_500" />
 
-        <Button
-            android:id="@+id/btn_save"
-            style="@style/B3_2"
-            android:layout_width="90dp"
-            android:layout_height="44dp"
-            android:layout_marginTop="80dp"
-            android:background="@drawable/selector_btn_enable"
-            android:enabled="false"
-            android:text="@string/save_btn"
-            android:textColor="@drawable/selector_text_enable"
-            android:visibility="visible" />
-
         <TextView
             android:id="@+id/text_fortune"
             style="@style/B3_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="22dp"
-            android:layout_marginTop="40dp"
             android:layout_marginEnd="22dp"
             android:background="@drawable/btn_300"
             android:padding="12dp"
@@ -64,10 +53,22 @@
             android:visibility="gone" />
 
         <Button
+            android:id="@+id/btn_save"
+            style="@style/B3_2"
+            android:layout_width="90dp"
+            android:layout_height="44dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/selector_btn_enable"
+            android:enabled="false"
+            android:text="@string/save_btn"
+            android:textColor="@drawable/selector_text_enable"
+            android:visibility="visible" />
+
+        <Button
             android:id="@+id/btn_back"
             style="@style/B3_2"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="44dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/btn_500"
             android:enabled="false"
